[gd_scene load_steps=11 format=3 uid="uid://dvlmutw7v33j0"]

[ext_resource type="Script" path="res://src/components/editors/local/editor_item/editor_item.gd" id="1_gsbp6"]
[ext_resource type="PackedScene" uid="uid://b2tm4lxm80sj0" path="res://src/components/editors/local/editor_item/rename_editor_dialog.tscn" id="2_6et78"]
[ext_resource type="Texture2D" uid="uid://bqnuds1nn277g" path="res://assets/Godot128x128.svg" id="2_8fw8m"]
[ext_resource type="Script" path="res://src/components/misc/favorite_button.gd" id="3_8hshq"]
[ext_resource type="PackedScene" uid="uid://dgm66rd6ay24" path="res://src/components/editors/local/editor_item/add_extra_arguments_editor_dialog.tscn" id="3_dx4xf"]
[ext_resource type="Script" path="res://src/components/misc/list_item_icon.gd" id="5_48fct"]
[ext_resource type="Script" path="res://src/components/misc/list_item_title_label.gd" id="6_qnxw1"]
[ext_resource type="Script" path="res://src/components/misc/item_tag_container.gd" id="7_0bi54"]
[ext_resource type="Script" path="res://src/components/misc/themed_button.gd" id="8_3j1qu"]
[ext_resource type="Script" path="res://src/components/misc/list_item_path_label.gd" id="8_d5wg1"]

[node name="EditorItem" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_gsbp6")
_rename_dialog_scene = ExtResource("2_6et78")
_add_extra_arguments_scene = ExtResource("3_dx4xf")

[node name="Favorite" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="FavoriteButton" type="TextureButton" parent="Favorite"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("3_8hshq")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_8fw8m")
script = ExtResource("5_48fct")

[node name="InfoVBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="InfoVBox"]
custom_minimum_size = Vector2(2.08165e-12, 1)
layout_mode = 2

[node name="Title" type="HBoxContainer" parent="InfoVBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="TitleLabel" type="Label" parent="InfoVBox/Title"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "test"
script = ExtResource("6_qnxw1")

[node name="Control" type="Control" parent="InfoVBox/Title"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="TagContainer" type="HBoxContainer" parent="InfoVBox/Title"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("7_0bi54")

[node name="Path" type="HBoxContainer" parent="InfoVBox"]
modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2

[node name="ExploreButton" type="Button" parent="InfoVBox/Path"]
unique_name_in_owner = true
layout_mode = 2
flat = true
script = ExtResource("8_3j1qu")

[node name="PathLabel" type="Label" parent="InfoVBox/Path"]
unique_name_in_owner = true
layout_mode = 2
text = "/home/kovkel/editor/path"
script = ExtResource("8_d5wg1")
